--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   ],
   "scripts": {
     "clean": "rm -rf dist && rm -rf coverage",
-    "lint": "yarn lint:prettier && yarn lint:tslint",
-    "lint:prettier": "prettier --check \"**/*.{js,ts,md}\"",
-    "lint:tslint": "yarn tslint -c tslint.json '{lib,test}/**/*.ts'",
-    "lint:fix": "prettier --write \"**/*.{js,ts,md}\"",
+    "lint": "yarn prettier && yarn eslint",
+    "lint:fix": "yarn prettier:fix && yarn eslint:fix",
+    "eslint": "eslint '{src,test}/**/*.ts'",
+    "eslint:fix": "yarn eslint --fix",
+    "prettier": "prettier --list-different \"**/*.{js,ts,md}\"",
+    "prettier:fix": "prettier --write \"**/*.{js,ts,md}\"",
     "build": "tsc",
     "pretest": "yarn build",
     "test": "jest",
@@ -55,8 +57,14 @@
     "@types/micromatch": "^4.0.1",
     "@types/node": "^14.6.2",
     "@types/supertest": "^2.0.10",
+    "@types/ws": "^7.2.6",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "browser-sync": "^2.26.12",
     "connect": "^3.7.0",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
@@ -66,8 +74,6 @@
     "prettier": "^2.1.1",
     "supertest": "^4.0.2",
     "ts-jest": "^26.3.0",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.2",
     "ws": "^7.3.1"
   },
